--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>sfg-pet-clinic</name>
     <description>SFG guru.springframework.sfgpetclinic.model.Pet Clinic Project</description>
 
@@ -50,6 +50,6 @@
         <developerConnection>
             scm:git:https://github.com/Ux3b1/sfg-pet-clinic.git
         </developerConnection>
-      <tag>sfg-pet-clinic-0.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 </project>
